--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "build:prod": "ng build  --configuration=production --base-href=./",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "github-deploy": "npx angular-cli-ghpages --dir=dist/"
   },
   "private": true,
   "dependencies": {
