--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:prod": "ng build  --configuration=production --base-href=./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "github-build": "ng build --configuration production --base-href 'https://sumedhav05.github.io/my-portfolio-website/'",
     "github-deploy": "npx angular-cli-ghpages --dir=dist/my-portfolio-website"
   },
   "private": true,
