--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/my-portfolio-website",
-            "index": "index.html",
+            "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
